2. 발표자료 수정
불필요한 구문 및 ref 제거

--- a/33-js-concepts/2.PrimitiveTypes.md
+++ b/33-js-concepts/2.PrimitiveTypes.md
@@ -16,7 +16,7 @@
 #### 원시 타입의 값은 메소드를 갖지 않음
 
 #### Symbol("foo") === Symbol("foo")
-#### Symbol
+
 ```js
 const obj = {};
 
@@ -28,6 +28,7 @@ obj[mySymbol2] = 123;
 console.log(obj); // { [Symbol(mySymbol)]: 123 }
 console.log(obj[mySymbol]); // 123
 console.log(obj[mySymbol2]); // 123
+console.log(obj[mySymbol] === obj[mySymbol2]); // false
 
 ```
 - Symbol() 함수는 호출될 때마다 Symbol 값을 생성
@@ -87,5 +88,4 @@ num === 33; // false
 
 # ref
 - [자바스크립트 데이터 유형  - MDN](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Primitive_values/)
-- [데이터 타입과 변수 - 프로그래머스](https://poiemaweb.com/js-data-type-variable)
 - [데이터 타입과 변수 - 프로그래머스](https://poiemaweb.com/js-data-type-variable)
