--- a/33-js-concepts/3.ValueTypes&ReferenceTypes.md
+++ b/33-js-concepts/3.ValueTypes&ReferenceTypes.md
@@ -14,7 +14,7 @@ console.log(num2); // 0
 
 ![value Types](./imgs/valueTypes.png)
 
-> 첫번째 구문이 실행되면 메모리에 '0'이 생성되고 식별자 num1은 메모리에 생성된 '0'의 메모리 주소를 가리킨다. 그리고 두번째 구문이 실행되면 이전에 생성된 '0'을 수정하는 것이 아니라 새로운 '100' 메모리에 생성하고 식별자 num1을 가리킨다. 이때 '0'과 '100'은 모두 메모리에 존재하고 있다. 변수 num1은 '0'을 가리키고 있다가 '100'을 가리키도록 변경되었을 뿐이다.
+> 첫번째 구문이 실행되면 메모리에 '0'이 생성되고 식별자 num1은 메모리에 생성된 '0'의 메모리 주소를 가리킨다. 그리고 두번째 구문이 실행되면 이전에 생성된 '0'을 수정하는 것이 아니라 새로운 '100' 메모리를 생성하고 식별자 num1을 가리킨다. 이때 '0'과 '100'은 모두 메모리에 존재하고 있다. 변수 num1은 '0'을 가리키고 있다가 '100'을 가리키도록 변경되었을 뿐이다.
 
 ## Reference Types (object)
 
