레퍼런스 수정

--- a/33-js-concepts/17.Prototype Inheritance and Prototype Chain.md
+++ b/33-js-concepts/17.Prototype Inheritance and Prototype Chain.md
@@ -64,4 +64,6 @@ c.attr1 // 'a'
 8. 찾은 속성의 값을 리턴한다.
 
 
-https://meetup.toast.com/posts/104
+# ref
+- [Javascript 핵심 개념 알아보기 - JS Flow](https://www.inflearn.com/course/%ED%95%B5%EC%8B%AC%EA%B0%9C%EB%85%90-javascript-flow/dashboard)
+- [쉽게 이해하는 자바스크립트 프로토타입 체인](https://meetup.toast.com/posts/104)
