--- a/33-js-concepts/2.PrimitiveTypes.md
+++ b/33-js-concepts/2.PrimitiveTypes.md
@@ -58,16 +58,14 @@ foo instanceof Object; // true -> function;
 ### 2. object (객체타입)
 
 #### Wrapper Object (래퍼 오브젝트)
-- [Built-in objects](https://developer.mozilla.org/en-US/docs/Web/JavaScript)<br>
+- [Built-in objects](https://developer.mozilla.org/en-US/docs/Web/JavaScript):
 String, Number, Boolean, Function 와 같은 원시타입을 new 키워드로 생성하면 원시타입에 대한 래퍼 오브젝트(Wrapper Object)가 생성
-
-
-```js
-typeof 33; // "number"
-const num = new Number(33);
-typeof num; // "object"
-num === 33; // false
-```
+    ```js
+    typeof 33; // "number"
+    const num = new Number(33);
+    typeof num; // "object"
+    num === 33; // false
+    ```
 
  - 오토박싱(Auto-Boxing) :몇몇 원시 타입에서 프로퍼티나 메소드를 호출하려 할 때, 자바스크립트는 처음으로 이것을 임시 래퍼 오브젝트로 바꾼 뒤에 프로퍼티나 메소드에 접근하려 합니다. 중요한 것은 이 과정에서 원본에는 아무런 영향을 미치지 않습니다.
 
