--- a/33-js-concepts/16.new, Constructor, instanceof and Instances.md
+++ b/33-js-concepts/16.new, Constructor, instanceof and Instances.md
@@ -1,8 +1,8 @@
 # 16.new, Constructor, instanceof and Instances
 
 ## Instances
-- "인스턴스(instance)" 라는 용어는 "객체(object)" 와 유사하다. 다만, 의미상으로 "객체"는 좀 더 일반적인 의미인 반면 "인스턴스" 라고 표현하면 "현재 생성된 바로 그 객체" 라는 인스턴트(instant)한 뉘앙스를 더 짙게 표현할 수 있습니다.
-Prototype Inheritance and Prototype Chain
+- "인스턴스(instance)" 라는 용어는 "객체(object)" 와 유사함,
+- "객체"는 좀 더 일반적인 의미인 반면 "인스턴스" 라고 표현하면 "현재 생성된 바로 그 객체"
 
 ## new, Constructor
 - Constructor을 부여받아야만 new를 통해 객체를 만들 수 있다. 이것이 오로지 함수만 new 키워드를 사용할 수 있는 이유
