발표자료 수정

--- a/33-js-concepts/16.new, Constructor, instanceof and Instances.md
+++ b/33-js-concepts/16.new, Constructor, instanceof and Instances.md
@@ -26,9 +26,12 @@ console.log(first.name);
 
 ### Array 객체 예시
 ![Reference Types](./imgs/array2.png)
+
 ![Reference Types](./imgs/array1.png)
 
 ## instanceof
+- instanceof 연산자는 생성자의 prototype 속성이 객체의 프로토타입 체인 어딘가 존재하는지 판별합니다.
+
 ```
 console.log(first instanceof Student) // true
 console.log(first instanceof Object) // true
