--- a/33-js-concepts/17.Prototype Inheritance and Prototype Chain.md
+++ b/33-js-concepts/17.Prototype Inheritance and Prototype Chain.md
@@ -12,14 +12,17 @@ function Car (name, color) {
 var redCar = new Car('redCar','red')
 var pinkCar = new Car('pinkCar','pink')
 
+#1 . 모든 Car에 getColor라는 기능을 추가하려고 한다!
 
-<!-- redCar.getColor = function(){
+1) 각 인스턴스에 메소드 추가 -> 반복 작업
+redCar.getColor = function(){
   return this.color
 }
 pinkCar.getColor = function(){
   return this.color
-} -->
+}
 
+2) 프로토타입에 메소드 추가 -> 모든 Car 메소드 추가 됨
 Car.prototype.getColor = function(){
     return this.color
 }
