--- a/33-js-concepts/26.Async,Await.md
+++ b/33-js-concepts/26.Async,Await.md
@@ -46,3 +46,71 @@ function notF(){
   return result ;
 }
 ```
+
+## async/await 의 여러 표현방법
+
+1. 기본
+
+```jsx
+async function f() {
+	await foo(1, 1000);
+}
+```
+
+2. 즉시실행
+
+```jsx
+(async function f() {
+	await foo(1, 1000);
+})();
+```
+
+3. 화살표 함수
+
+```jsx
+const f = async () => {
+	await foo(1, 1000);
+};
+```
+
+## async/await의 잘못된 예제
+
+```jsx
+// 원하는 결과 : 1 2 3
+async function f() {
+	await foo(1, 2000);
+	await foo(2, 500);
+	await foo(3, 1000);
+}
+
+function foo(num, sec) {
+	setTimeout(function() {
+		console.log(num);
+	}, sec);
+}
+
+f(); //실제 결과 : 2 3 1
+```
+
+> ### 1 2 3 순서가 되도록 수정
+
+```jsx
+// foo()를 수정함
+async function f() {
+	await foo(1, 2000);
+	await foo(2, 500);
+	await foo(3, 1000);
+}
+
+function foo(num, sec) {
+	return new Promise(function(resolve, reject) {
+		setTimeout(function() {
+			console.log(num);
+			resolve('async는 Promise방식을 사용합니다.');
+			// resolve를 써주지 않으면 2 3 1 이 나옴.. why?
+		}, sec);
+	});
+}
+
+f(); //실제 결과 : 1 2 3
+```
